# programmering2

./: .gitignore  README.md
Flaskdemo/: flask-demo.py
gruppuppgift/: .gitignore  Problem.md
gruppuppgift/application/: api_key.py  app.py  func.py  package.json
gruppuppgift/application/templates/: form.html  index.html  layout.html  resultat.html
individuella/: .gitignore  requirements.txt
individuella/application/: anton.py  app.py  func.py
individuella/application/templates/: 404.html  footer.html  header.html  index.html  layout.html  recommendations.html  top10.html
individuella/tests/: test_app.py
lektion_2/application/: app.py  requirements.txt
lektion_2/application/templates/: about.html
lektion_3/: requirements.txt
lektion_3/application/: app.py
lektion_3/application/templates/: homepage.html
lektion_4/: requirements.txt
lektion_4/application/: app.py
lektion_4/application/templates/: footer.html  form.html  layout.html
lektion_6/: requirements.txt
lektion_6/application/: app.py
lektion_6/application/templates/: form.html
lektion_6/tests/: test_4_Challenges.py
lektion_7/application/: app.py  func.py
lektion_7/application/templates/: hello.html
lektion_7_chat/: requirements.txt
lektion_7_chat/chat/: pyproject.toml
lektion_7_chat/chat/src/chat/: __init__.py
lektion_7_chat/chat/src/chat/templates/: index.html
lektion_7_chat/chat/tests/: test_chat.py
